feat: [stable] [done] [tested] Release candidate for codexstester simple - release 1.0.9 - java21 - spring boot 3.3.2