@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.4</version>
+		<version>3.3.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -17,12 +17,13 @@
 	<description>codexstester</description>
 
 	<properties>
-		<java.version>17</java.version>
+
+		<java.version>21</java.version>
 
 		<junit.version>4.13.2</junit.version>
 		<junit-jupiter.version>5.8.2</junit-jupiter.version>
 		<junit-platform.version>1.10.3</junit-platform.version>
-		<selenium.version>3.13.0</selenium.version>
+		<selenium.version>4.19.1</selenium.version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -149,6 +150,12 @@
 				<version>3.2.4</version>
 				<configuration>
 					<createDependencyReducedPom>false</createDependencyReducedPom>
+					<!--JVM Options-->
+					<!-- -ea
+					-Xshare:off
+					-XX:+EnableDynamicAgentLoading
+					&#45;&#45;add-opens java.base/java.util=ALL-UNNAMED
+					&#45;&#45;add-opens java.base/java.lang=ALL-UNNAMED-->
 				</configuration>
 				<executions>
 					<execution>
